[package]
name = "skyraptor-android"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust Android app for the DRCX5 (android-activity, software-blit render)"

[lib]
crate-type = ["cdylib"]

# Android-only deps: keeps host `cargo build --workspace` / tests working
# (the lib compiles to an empty cdylib off-Android).
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
ndk = "0.9"
log = "0.4"
android_logger = "0.14"

[package.metadata.android]
package = "app.skyraptor.drcx5"

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 34

[package.metadata.android.application]
label = "Skyraptor"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"
