[package]
name = "glitchwing-android"
version = "0.1.0"
edition = "2021"
description = "Glitchwing — pure-Rust Android app for WiFi-camera toy drones (android-activity, software-blit render)"

[lib]
crate-type = ["cdylib"]

# Android-only deps: keeps host `cargo build --workspace` / tests working
# (the lib compiles to an empty cdylib off-Android).
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
ndk = "0.9"
ndk-context = "0.1"
jni = "0.21"
log = "0.4"
android_logger = "0.14"
protocol = { path = "../protocol" }
net = { path = "../net" }
hud = { path = "../hud" }
zune-jpeg = "0.4"

[package.metadata.android]
package = "app.glitchwing"
resources = "res"

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 34

[package.metadata.android.application]
label = "Glitchwing"
icon = "@mipmap/ic_launcher"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"

# requestNetwork(WifiNetworkSpecifier) — auto-join the drone AP
[[package.metadata.android.uses_permission]]
name = "android.permission.CHANGE_NETWORK_STATE"

# Scan for the drone AP in the WifiNetworkSpecifier picker (Android 13+ runtime perm)
[[package.metadata.android.uses_permission]]
name = "android.permission.NEARBY_WIFI_DEVICES"
